# executor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: bench.yml  release.yml
benches/: README.md  benchmark.sh  benchmark_history.csv  benchmark_results.csv
src/: cli.rs  lib.rs  main.rs
src/delete/: delete_file.rs  traverse_and_delete.rs
src/delete_command/: delete.rs
src/errors/: deletion_error.rs  execution_error.rs  search_error.rs
src/execute/: execute.rs  execute_file.rs  traverse_and_execute.rs
src/execute_command/: execute_file.rs  traverse_and_execute.rs
src/search/: traverse_and_search.rs  traverse_recursive.rs
src/search_command/: search.rs  search_files.rs  traverse_and_search.rs  traverse_recursive.rs
src/types/: search_match.rs  temporary_path.rs  traverse_match.rs  traverse_result.rs
src/utils/: create_nested_directory_structure.rs  create_temp_directory_with_script.rs
tests/: test_delete_command.rs  test_execute_command.rs  test_search_command.rs
tests/test_data/dir1/: script.sh
tests/test_data/dir1/subdir1/: script.sh
