[package]
name = "executor"
version = "1.0.0"
edition = "2021"
authors = ["J.Z.W."]
description = "Recursively execute or remove scripts in nested directories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.12"
env_logger = "0.11.1"
tempfile = "3.8.1"
